2005-04-07  Jens A. Tkotz <jens@peino.de>  1.5-RC4-CVS-b3

	* Fix: $iconelement was not correct initialized.

2005-04-05  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b2

	* Fix: Incorrect variable being referenced when setting a movie as
	  highlight resulted in a missing highlight thumbnail.

2005-04-05  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b1

	* Fix: lib/Form.php - remove the newlines from selectOptions.
	  The High slideshow uses selectOptions in JS with document.write
	  which is incapable of handling newlines in its data.

2005-04-04  Chris Kelly <ckdake@users.sf.net> 1.5-RC3

	* 1.5-RC3 Release

2005-04-01  Jens A. Tkotz <jens@peino.de>  1.5-RC3-cvs-b23

	* "Fix": highest rating code in stats was broken -> commented out

2005-03-30  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC3-cvs-b22

	* Fix: Logged in users now no longer use the stats cache - this will
	  prevent issues when using stats filters (which only logged-in users can see)
	  and should alleviate a possible caching-permissions/exposure bug.

	* Change: Removed some dead, commented code.

2005-03-29  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC3-cvs-b21

	* Fix: check_mail.php now uses gallery_mail() instead of calling mail()
	  directly.

2005-03-28  Jens A. Tkotz <jens@peino.de>  1.5-RC3-cvs-b20

	* Change: Wording on view_album. 
		"admin options" -> "album actions"
		"edit ..." -> "... actions"

2005-03-27  Jens A. Tkotz <jens@peino.de>  1.5-RC3-cvs-b19

	* Fix: madmod1 skin had unquoted keys.

2005-03-27  Jens A. Tkotz <jens@peino.de>  1.5-RC3-cvs-b18

	* Fix: admin-page.php, stats-wizard.php, tools/despam-comments.php and 
	       tools/validate_albums.php gave errors when embedded.

	* Fix: Show manage user link in adminpage only when not embedded.

	* Fix: Added tools/validate_albums.php to securelsit to allow running embedded.

	* Fix: Typo in tools/despam-comments.php.

	* CHange: Moved some css from adminpage and stats-wizard into base.css