@@ -1,3 +1,8 @@
+2005-04-07  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC4-cvs-b4
+
+	* Fix: When displaying a single column in view_album, don't try to 
+	  pad the row height to match other columns
+
 2005-04-07  Jens A. Tkotz <jens@peino.de>  1.5-RC4-CVS-b3
 
 	* Fix: $iconelement was not correct initialized.
